--- a/lang/de.json
+++ b/lang/de.json
@@ -51,143 +51,143 @@
 "MB.Dice": "Würfel",
 "MB.Dodge": "Ausweichen",
 "MB.DR": "DR",
-"MB.Encumbered": "Encumbered",
-"MB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
-"MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
-"MB.Equipment": "Equipment",
-"MB.Failure": "Failure",
-"MB.FollowerSpeciality": "Speciality",
-"MB.FollowerTrait": "Trait",
-"MB.FollowerValue": "Value",
-"MB.GetBetter": "Get Better",
-"MB.HandedOne": "One-handed",
-"MB.HandedTwo": "Two-handed",
-"MB.Heal": "Heal",
+"MB.Encumbered": "Überladen",
+"MB.EquipArmorToAbsorb": "Lege Rüstung an um Schaden zu verringern.",
+"MB.EquipAWeaponToAttack": "Lege Waffe an um anzugreifen.",
+"MB.Equipment": "Ausrüstung",
+"MB.Failure": "Fehlschlag",
+"MB.FollowerSpeciality": "Spezialgebiet",
+"MB.FollowerTrait": "Merkmal",
+"MB.FollowerValue": "Wert",
+"MB.GetBetter": "Werde besser",
+"MB.HandedOne": "Einhändig",
+"MB.HandedTwo": "Beidhändig",
+"MB.Heal": "Heilung",
 "MB.Hit": "HIT",
-"MB.HitPoints": "Hit Points",
+"MB.HitPoints": "Lebenspunkte",
 "MB.HP": "HP",
 "MB.Holding": "Holding",
-"MB.IncomingAttack": "Incoming Attack",
-"MB.Individual": "Individual",
-"MB.Infection": "Infection",
+"MB.IncomingAttack": "Eingehende Attacke",
+"MB.Individual": "Individuell",
+"MB.Infection": "Infektion",
 "MB.Initiative": "Initiative",
-"MB.InitiativeEnemiesBegin": "Enemies Begin",
-"MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
-"MB.Is": "is",
-"MB.Inflict": "Inflict",
+"MB.InitiativeEnemiesBegin": "Gegner beginnen",
+"MB.InitiativePlayerCharactersBegin": "Spieler Charaktere beginnen",
+"MB.Is": "ist",
+"MB.Inflict": "Zufügen",
 "MB.Items": "Items",
-"MB.ItemAgilityDRModifier": "Agility DR Modifier",
-"MB.ItemCapacity": "Capacity",
-"MB.ItemCreate": "Create Item",
-"MB.ItemDamageDie": "Damage Die",
-"MB.ItemDamageReductionDie": "Damage Reduction Die",
-"MB.ItemDefenseDRModifier": "Defense DR Modifier",
-"MB.ItemDelete": "Delete Item",
-"MB.ItemEdit": "Edit Item",
-"MB.ItemEquipped": "Equipped",
+"MB.ItemAgilityDRModifier": "Agilität DR Modifikator",
+"MB.ItemCapacity": "Kapazität",
+"MB.ItemCreate": "Erstelle Item",
+"MB.ItemDamageDie": "Schadenswürfel",
+"MB.ItemDamageReductionDie": "Schadensreduktionswürfel",
+"MB.ItemDefenseDRModifier": "Verteidigungs DR Modifikator",
+"MB.ItemDelete": "Lösche Item",
+"MB.ItemEdit": "Bearbeite Item",
+"MB.ItemEquipped": "Ausgerüstet",
 "MB.ItemHanded": "Handed",  
 "MB.ItemName": "Item Name",
-"MB.ItemPrice": "Price",
-"MB.ItemScrollType": "Scroll Type",
-"MB.ItemTypeArmor": "Armor",
-"MB.ItemTypeArmorPlural": "Armor",
-"MB.ItemTypeClass": "Class",
-"MB.ItemTypeContainer": "Container",
-"MB.ItemTypeFeat": "Feat",
-"MB.ItemTypeFeatPlural": "Feats",
-"MB.ItemTypeMisc": "Misc",
-"MB.ItemTypeScroll": "Scroll",
-"MB.ItemTypeScrollPlural": "Scrolls",
-"MB.ItemTypeShield": "Shield",
-"MB.ItemTypeWeapon": "Weapon",
-"MB.ItemTypeWeaponPlural": "Weapons",
-"MB.ItemUnequipped": "Unequipped",
-"MB.ItemWeaponType": "Weapon Type",
-"MB.Miseries": "Miseries",
+"MB.ItemPrice": "Preis",
+"MB.ItemScrollType": "Schriftrollentyp",
+"MB.ItemTypeArmor": "Rüstung",
+"MB.ItemTypeArmorPlural": "Rüstungen",
+"MB.ItemTypeClass": "Klasse",
+"MB.ItemTypeContainer": "Behälter",
+"MB.ItemTypeFeat": "Tat",
+"MB.ItemTypeFeatPlural": "Taten",
+"MB.ItemTypeMisc": "Sonstig",
+"MB.ItemTypeScroll": "Schriftrolle",
+"MB.ItemTypeScrollPlural": "Schriftrollen",
+"MB.ItemTypeShield": "Schild",
+"MB.ItemTypeWeapon": "Waffe",
+"MB.ItemTypeWeaponPlural": "Waffen",
+"MB.ItemUnequipped": "Unausgerüstet",
+"MB.ItemWeaponType": "Waffentyp",
+"MB.Miseries": "Miserien",
 "MB.Miss": "MISS",
-"MB.Modified": "Modified",
-"MB.Morale": "Morale",
-"MB.MoraleFlees": "Flees",
-"MB.MoraleSurrenders": "Surrenders",
+"MB.Modified": "Modifiziert",
+"MB.Morale": "Moral",
+"MB.MoraleFlees": "Flüchtet",
+"MB.MoraleSurrenders": "Gibt auf",
 "MB.Name": "Name",
-"MB.NoActiveEncounter": "No Active Encounter",
-"MB.NoEffect": "No effect",
-"MB.NoPowerUsesRemaining": "No Power uses remaining",
-"MB.Omens": "Omens",
-"MB.Outcome": "Outcome",
+"MB.NoActiveEncounter": "Keine aktive Begegnung",
+"MB.NoEffect": "Kein Effekt,
+"MB.NoPowerUsesRemaining": "Keine Wirkmacht übrig",
+"MB.Omens": "Omen",
+"MB.Outcome": "Auswirkung",
 "MB.Party": "Party",
 "MB.PartyInitiative": "Party Initiative",
-"MB.PerDay": "Per Day",
-"MB.PerRest": "Per Rest",
-"MB.RollMacro": "Roll Macro",
-"MB.Powers": "Powers",
-"MB.PowersPerDayText": "PRE+d4 times per day",
-"MB.PowerUsesRemaining": "Uses Remaining",
-"MB.Quantity": "Quantity",
-"MB.Reaction": "Reaction",
-"MB.ReactionAlmostFriendly": "Almost friendly",
-"MB.ReactionAngered": "Angered",
-"MB.ReactionHelpful": "Helpful",
-"MB.ReactionIndifferent": "Indifferent",
-"MB.ReactionKill": "Kill!",
-"MB.Rest": "Rest",
-"MB.Roll": "Roll",
-"MB.Rolls": "Rolls",
-"MB.RollFormula": "Roll Formula",
-"MB.RollLabel": "Roll Label",
-"MB.RollPartyInitiative": "Roll Party Initiative",
-"MB.ScrollTypeSacred": "Sacred Scroll",
-"MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
-"MB.ScrollTypeUnclean": "Unclean Scroll",
-"MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
-"MB.SheetClassContainer": "Default Mork Borg Container Sheet",
-"MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
-"MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
-"MB.Shield": "Shield",
-"MB.ShieldUseText": "-1 damage, or break to ignore one attack",
-"MB.Silver": "Silver",
-"MB.StandsFirm": "Stands firm",
-"MB.Starting": "Starting",
-"MB.Starvation": "Starvation",
-"MB.Success": "Success",
-"MB.TabContents": "Contents",
-"MB.TabDescription": "Description",
+"MB.PerDay": "Pro Tag",
+"MB.PerRest": "Pro Rast",
+"MB.RollMacro": "Würfel Macro",
+"MB.Powers": "Wirkmacht",
+"MB.PowersPerDayText": "PRÄ+W4 mal pro Tag",
+"MB.PowerUsesRemaining": "Nutzungen verbleibend",
+"MB.Quantity": "Anzahl",
+"MB.Reaction": "Reaktion",
+"MB.ReactionAlmostFriendly": "Nahezu freundlich",
+"MB.ReactionAngered": "Erzürnt",
+"MB.ReactionHelpful": "Hilfsbereit",
+"MB.ReactionIndifferent": "Gleichgültig",
+"MB.ReactionKill": "Töten!",
+"MB.Rest": "Rasten",
+"MB.Roll": "Wurf",
+"MB.Rolls": "Würfe",
+"MB.RollFormula": "Wurf Formuel",
+"MB.RollLabel": "Wurf Label",
+"MB.RollPartyInitiative": "Würfle Party Initiative",
+"MB.ScrollTypeSacred": "Heilige Schriftrolle",
+"MB.ScrollTypeTablet": "Schrifttafel der ockerfarbener Dunkelheit",
+"MB.ScrollTypeUnclean": "Unreine Schriftrolle",
+"MB.SheetClassCharacter": "Standard Mork Borg Charakterbogen",
+"MB.SheetClassContainer": "Standard Mork Borg Behälterbogen",
+"MB.SheetClassCreature": "Standard Mork Borg Kreaturenbogen",
+"MB.SheetClassFollower": "Standard Mork Borg Begleiterbogen",
+"MB.Shield": "Schild",
+"MB.ShieldUseText": "-1 Schaden, oder zerstöre es um Schaden zu ignorieren",
+"MB.Silver": "Silber",
+"MB.StandsFirm": "Standhaft bleiben",
+"MB.Starting": "Startet",
+"MB.Starvation": "Verhungern",
+"MB.Success": "Erfolg",
+"MB.TabContents": "Inhalt",
+"MB.TabDescription": "Beschreibung",
 "MB.TabDetails": "Details",
-"MB.TabFeats": "Feats",
-"MB.TabObituary": "Obituary",
-"MB.TabPowers": "Powers",
-"MB.TabTreasures": "Treasures",
-"MB.TabViolence": "Violence",
-"MB.Take": "Take",
-"MB.TargetArmor": "Target Armor",
-"MB.Test": "Test",
-"MB.Tier": "Tier",
+"MB.TabFeats": "Taten",
+"MB.TabObituary": "Todesanzeige",
+"MB.TabPowers": "Wirkmächte",
+"MB.TabTreasures": "Schätze",
+"MB.TabViolence": "Gewalt",
+"MB.Take": "Nimm",
+"MB.TargetArmor": "Zielrüstung",
+"MB.Test": "Probe",
+"MB.Tier": "Stufe",
 "MB.Title": "MÖRK BORG",
-"MB.Type": "Type",
+"MB.Type": "Typ",
 "MB.Vs": "vs",
-"MB.WeaponTable": "Weapon Table",
-"MB.WeaponTypeMelee": "Melee",
-"MB.WeaponTypeRanged": "Ranged",
-"MB.Wield": "Wield",
-"MB.WieldAPower": "Wield a Power",
-"MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
-"MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
-"MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
-"MB.YouAreHit": "You are Hit",
-"MB.YouHaveNoFeats": "You have no Feats",
-"MB.YouHaveNoScrolls": "You have no Scrolls",
+"MB.WeaponTable": "Waffentabelle",
+"MB.WeaponTypeMelee": "Nahkampf",
+"MB.WeaponTypeRanged": "Fernkampf",
+"MB.Wield": "ausüben",
+"MB.WieldAPower": "übe eine Macht aus",
+"MB.WieldAPowerFumble": "Ungeschicktheit - Rolle eine Arkane Katastrophe.",
+"MB.WieldAPowerText": "AUS DR12, oder -W2 HP und keine Machtausübung für eine Stunde",
+"MB.WieldAPowerDizzy": "sei benommen und übe keine Macht für eine Stunde aus",
+"MB.YouAreHit": "Du bist getroffen",
+"MB.YouHaveNoFeats": "Du hast keine Taten übrig",
+"MB.YouHaveNoScrolls": "Du hast keine Schriftrollen",
 
-"SETTINGS.MBBlackletter": "Blackletter",
-"SETTINGS.MBBlackOnWhiteBlack": "Black on white (black)",
-"SETTINGS.MBBlackOnYellowWhite": "Black on yellow (white)",
-"SETTINGS.MBColorScheme": "Color Scheme",
-"SETTINGS.MBColorSchemeHint": "Choose a color scheme for the UI.",
-"SETTINGS.MBFontScheme": "Font Scheme",
-"SETTINGS.MBFontSchemeHint": "Choose a font scheme for the UI.",
-"SETTINGS.MBFoundryDefault": "Foundry Default",
-"SETTINGS.MBLegible": "Legible",
-"SETTINGS.MBWhiteOnBlackPink": "White on black (pink)",
-"SETTINGS.MBWhiteOnBlackWhite": "White on black (white)",
-"SETTINGS.MBWhiteOnBlackYellow": "White on black (yellow)",
-"SETTINGS.MBWhiteOnPinkWhite": "White on pink (white)"
+"SETTINGS.MBBlackletter": "Schwarze Schrift",
+"SETTINGS.MBBlackOnWhiteBlack": "Schwarz auf Weiß (Schwarz)",
+"SETTINGS.MBBlackOnYellowWhite": "Schwarz auf Weiß (Weiß)",
+"SETTINGS.MBColorScheme": "Farbschema",
+"SETTINGS.MBColorSchemeHint": "Wähle ein Farbschema für das UI.",
+"SETTINGS.MBFontScheme": "Font Schema",
+"SETTINGS.MBFontSchemeHint": "Wähle ein Font Schema für das UI.",
+"SETTINGS.MBFoundryDefault": "Foundry Standard",
+"SETTINGS.MBLegible": "Lesbar",
+"SETTINGS.MBWhiteOnBlackPink": "Weiß auf Schwarz (Pink)",
+"SETTINGS.MBWhiteOnBlackWhite": "Weiß auf Schwarz (Weiß)",
+"SETTINGS.MBWhiteOnBlackYellow": "Weiß auf Schwarz (Gelb)",
+"SETTINGS.MBWhiteOnPinkWhite": "Weiß auf Pink (Weiß)"
 }
