--- a/lang/de.json
+++ b/lang/de.json
@@ -111,7 +111,7 @@
 "MB.MoraleSurrenders": "Gibt auf",
 "MB.Name": "Name",
 "MB.NoActiveEncounter": "Keine aktive Begegnung",
-"MB.NoEffect": "Kein Effekt,
+"MB.NoEffect": "Kein Effekt",
 "MB.NoPowerUsesRemaining": "Keine Wirkmacht übrig",
 "MB.Omens": "Omen",
 "MB.Outcome": "Auswirkung",
