--- a/lang/de.json
+++ b/lang/de.json
@@ -8,7 +8,7 @@
 "MB.AbilityStrengthAbbrev": "STR",
 "MB.AbilityToughness": "Zähigkeit",
 "MB.AbilityToughnessAbbrev": "ZÄH",
-"MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
+"MB.ActorNotInEncounter": "Dieser Akteur ist nicht Teil des Kampfgeschehens",
 "MB.Add": "Hinzufügen",
 "MB.AlternateName": "Alternativer Name",
 "MB.Armor": "Rüstung",
