--- a/lang/de.json
+++ b/lang/de.json
@@ -23,18 +23,18 @@
 "MB.AttackCritText": "Krit: x2 Schaden, Rüstung des Ziel um eine Stufe reduziert.",
 "MB.AttackFumbleText": "Ungeschicktheit: Waffe zerbricht oder geht verloren.",
 "MB.Base": "Basis",
-"MB.Broken": "Kaputt",
+"MB.Broken": "Gebrochen",
 "MB.CarryWeight": "Traglast",
-"MB.Carrying": "tragen",
+"MB.Carrying": "Getragen",
 "MB.CarryingCapacity": "Tragkapazität",
 "MB.CarryingRule": "STR+8 tragbare Gegenstände oder DR+2 on AGI/STR Probe.",
 "MB.Cancel": "Abbrechen",
 "MB.Class": "Klasse",
 "MB.ClassAbilities": "Fähigkeiten",
-"MB.ContainerAmountIn": "In Behälter",
+"MB.ContainerAmountIn": "Im Gepäck",
 "MB.ContainerHolding": "Holding",
 "MB.ContainerHolds": "hält",
-"MB.ContainerSpace": "Fassungsvermögen",
+"MB.ContainerSpace": "Maße",
 "MB.CreateNewItem": "Erstelle neues Item",
 "MB.CreatureArmor": "Rüstung",
 "MB.CreatureAttack": "Attacke",
@@ -52,14 +52,14 @@
 "MB.Dodge": "Ausweichen",
 "MB.DR": "DR",
 "MB.Encumbered": "Überladen",
-"MB.EquipArmorToAbsorb": "Lege Rüstung an um Schaden zu verringern.",
-"MB.EquipAWeaponToAttack": "Lege Waffe an um anzugreifen.",
+"MB.EquipArmorToAbsorb": "Lege eine Rüstung an um Schaden zu verringern.",
+"MB.EquipAWeaponToAttack": "Lege eine Waffe an um anzugreifen.",
 "MB.Equipment": "Ausrüstung",
 "MB.Failure": "Fehlschlag",
 "MB.FollowerSpeciality": "Spezialgebiet",
 "MB.FollowerTrait": "Merkmal",
 "MB.FollowerValue": "Wert",
-"MB.GetBetter": "Werde besser",
+"MB.GetBetter": "Steige auf",
 "MB.HandedOne": "Einhändig",
 "MB.HandedTwo": "Beidhändig",
 "MB.Heal": "Heilung",
@@ -85,7 +85,7 @@
 "MB.ItemDelete": "Lösche Item",
 "MB.ItemEdit": "Bearbeite Item",
 "MB.ItemEquipped": "Ausgerüstet",
-"MB.ItemHanded": "Handed",  
+"MB.ItemHanded": "Geführt",  
 "MB.ItemName": "Item Name",
 "MB.ItemPrice": "Preis",
 "MB.ItemScrollType": "Schriftrollentyp",
@@ -112,7 +112,7 @@
 "MB.Name": "Name",
 "MB.NoActiveEncounter": "Keine aktive Begegnung",
 "MB.NoEffect": "Kein Effekt",
-"MB.NoPowerUsesRemaining": "Keine Wirkmacht übrig",
+"MB.NoPowerUsesRemaining": "Keine Macht übrig",
 "MB.Omens": "Omen",
 "MB.Outcome": "Auswirkung",
 "MB.Party": "Party",
@@ -120,8 +120,8 @@
 "MB.PerDay": "Pro Tag",
 "MB.PerRest": "Pro Rast",
 "MB.RollMacro": "Würfel Macro",
-"MB.Powers": "Wirkmacht",
-"MB.PowersPerDayText": "PRÄ+W4 mal pro Tag",
+"MB.Powers": "Mächte",
+"MB.PowersPerDayText": "AUS+d4 mal pro Tag",
 "MB.PowerUsesRemaining": "Nutzungen verbleibend",
 "MB.Quantity": "Anzahl",
 "MB.Reaction": "Reaktion",
@@ -169,9 +169,9 @@
 "MB.WeaponTypeMelee": "Nahkampf",
 "MB.WeaponTypeRanged": "Fernkampf",
 "MB.Wield": "ausüben",
-"MB.WieldAPower": "übe eine Macht aus",
+"MB.WieldAPower": "wirke Macht aus",
 "MB.WieldAPowerFumble": "Ungeschicktheit - Rolle eine Arkane Katastrophe.",
-"MB.WieldAPowerText": "AUS DR12, oder -W2 HP und keine Machtausübung für eine Stunde",
+"MB.WieldAPowerText": "AUS DR12, oder -d2 HP und keine Machtausübung für eine Stunde",
 "MB.WieldAPowerDizzy": "sei benommen und übe keine Macht für eine Stunde aus",
 "MB.YouAreHit": "Du bist getroffen",
 "MB.YouHaveNoFeats": "Du hast keine Taten übrig",
