Localize rest dialog.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -129,6 +129,14 @@
 "MB.ReactionIndifferent": "Obrydd",
 "MB.ReactionKill": "Döda!",
 "MB.Rest": "Vila",
+"MB.RestDialogDontEat": "Don't eat - Restore no stats.",
+"MB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
+"MB.RestDialogFoodAndDrink": "Food and Drink",
+"MB.RestDialogInfected": "Infected - Restore no stats, lose d6 HP per day.",
+"MB.RestDialogLength": "Rest Length",
+"MB.RestDialogLengthLong": "Long - Full night's sleep. Restore d6 HP, regain Omens if depleted, regain PRE+d4 Power uses for the day.",
+"MB.RestDialogLengthShort": "Short - Catch your breath, have a drink. Restore d4 HP.",
+"MB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
 "MB.Roll": "Rulla",
 "MB.Rolls": "Rullar",
 "MB.RollFormula": "Rulla Formel",
