Localize broken dialog.

--- a/lang/de.json
+++ b/lang/de.json
@@ -24,6 +24,12 @@
 "MB.AttackFumbleText": "Ungeschicktheit: Waffe zerbricht oder geht verloren.",
 "MB.Base": "Basis",
 "MB.Broken": "Kaputt",
+"MB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
+"MB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
+"MB.BrokenHemorrhageLastHour": "DR18 the last hour",
+"MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenYouAreDead": "You are dead.",
 "MB.CarryWeight": "Traglast",
 "MB.Carrying": "tragen",
 "MB.CarryingCapacity": "Tragkapazität",
@@ -65,8 +71,9 @@
 "MB.Heal": "Heilung",
 "MB.Hit": "HIT",
 "MB.HitPoints": "Lebenspunkte",
+"MB.Hour": "hour",
+"MB.Hours": "hours",
 "MB.HP": "HP",
-"MB.Holding": "Holding",
 "MB.IncomingAttack": "Eingehende Attacke",
 "MB.Individual": "Individuell",
 "MB.Infection": "Infektion",
@@ -143,6 +150,8 @@
 "MB.Rolls": "Würfe",
 "MB.RollFormula": "Wurf Formuel",
 "MB.RollLabel": "Wurf Label",
+"MB.Round": "round",
+"MB.Rounds": "rounds",
 "MB.RollPartyInitiative": "Würfle Party Initiative",
 "MB.ScrollTypeSacred": "Heilige Schriftrolle",
 "MB.ScrollTypeTablet": "Schrifttafel der ockerfarbener Dunkelheit",
