--- a/lang/en.json
+++ b/lang/en.json
@@ -24,6 +24,12 @@
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
 "MB.Base": "Base",
 "MB.Broken": "Broken",
+"MB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
+"MB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
+"MB.BrokenHemorrhageLastHour": "DR18 the last hour",
+"MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenYouAreDead": "You are dead.",
 "MB.CarryWeight": "Carry Weight",
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
@@ -65,8 +71,9 @@
 "MB.Heal": "Heal",
 "MB.Hit": "HIT",
 "MB.HitPoints": "Hit Points",
+"MB.Hour": "hour",
+"MB.Hours": "hours",
 "MB.HP": "HP",
-"MB.Holding": "Holding",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Individual": "Individual",
 "MB.Infection": "Infection",
@@ -144,6 +151,8 @@
 "MB.RollFormula": "Roll Formula",
 "MB.RollLabel": "Roll Label",
 "MB.RollPartyInitiative": "Roll Party Initiative",
+"MB.Round": "round",
+"MB.Rounds": "rounds",
 "MB.ScrollTypeSacred": "Sacred Scroll",
 "MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
 "MB.ScrollTypeUnclean": "Unclean Scroll",
