--- a/lang/sv.json
+++ b/lang/sv.json
@@ -24,6 +24,12 @@
 "MB.AttackFumbleText": "Fummel: Vapnet går sönder eller förloras.",
 "MB.Base": "Bas",
 "MB.Broken": "Utslagen",
+"MB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
+"MB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
+"MB.BrokenHemorrhageLastHour": "DR18 the last hour",
+"MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+"MB.BrokenYouAreDead": "You are dead.",
 "MB.Cancel": "Avbryt",
 "MB.CarryWeight": "Vikt",
 "MB.Carrying": "Bärande",
@@ -65,6 +71,8 @@
 "MB.Heal": "Läk",
 "MB.Hit": "TRÄFFA",
 "MB.HitPoints": "Träffpoäng",
+"MB.Hour": "hour",
+"MB.Hours": "hours",
 "MB.HP":"TP",
 "MB.IncomingAttack": "Inkommande Attack",
 "MB.Individual": "Individuellt",
@@ -142,6 +150,8 @@
 "MB.RollFormula": "Rulla Formel",
 "MB.RollLabel": "Rulla Märka",
 "MB.RollPartyInitiative": "Rulla Grupp Initiativ",
+"MB.Round": "round",
+"MB.Rounds": "rounds",
 "MB.ScrollTypeSacred": "Helig Scrolla",
 "MB.ScrollTypeTablet": "Tavla av Ockra Dunkelhet",
 "MB.ScrollTypeUnclean": "Vanhelga Scrolla",
