Localize make scvm dialog.

--- a/lang/de.json
+++ b/lang/de.json
@@ -178,6 +178,7 @@
 "MB.Take": "Nimm",
 "MB.TargetArmor": "Zielrüstung",
 "MB.Test": "Probe",
+"MB.TheScvmfactory": "The Scvmfactory",
 "MB.Tier": "Stufe",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
