--- a/lang/en.json
+++ b/lang/en.json
@@ -156,6 +156,11 @@
 "MB.ScrollTypeSacred": "Sacred Scroll",
 "MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
 "MB.ScrollTypeUnclean": "Unclean Scroll",
+"MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
+"MB.ScvmfactoryMakeScvm": "Make Scvm",
+"MB.ScvmfactoryToggleAll": "Toggle All",
+"MB.ScvmfactoryToggleNone": "Toggle None",
+"MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
@@ -178,6 +183,7 @@
 "MB.Take": "Take",
 "MB.TargetArmor": "Target Armor",
 "MB.Test": "Test",
+"MB.TheScvmfactory": "The Scvmfactory",
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Type",
