--- a/lang/sv.json
+++ b/lang/sv.json
@@ -176,6 +176,7 @@
 "MB.Take": "Ta",
 "MB.TargetArmor": "Målets Rustningsvärde",
 "MB.Test": "Test",
+"MB.TheScvmfactory": "The Scvmfactory",
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
