Stub out scvmfactory translation entries.

--- a/lang/de.json
+++ b/lang/de.json
@@ -156,6 +156,11 @@
 "MB.ScrollTypeSacred": "Heilige Schriftrolle",
 "MB.ScrollTypeTablet": "Schrifttafel der ockerfarbener Dunkelheit",
 "MB.ScrollTypeUnclean": "Unreine Schriftrolle",
+"MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
+"MB.ScvmfactoryMakeScvm": "Make Scvm",
+"MB.ScvmfactoryToggleAll": "Toggle All",
+"MB.ScvmfactoryToggleNone": "Toggle None",
+"MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
 "MB.SheetClassCharacter": "Standard Mork Borg Charakterbogen",
 "MB.SheetClassContainer": "Standard Mork Borg Behälterbogen",
 "MB.SheetClassCreature": "Standard Mork Borg Kreaturenbogen",
