--- a/lang/sv.json
+++ b/lang/sv.json
@@ -155,6 +155,11 @@
 "MB.ScrollTypeSacred": "Helig Scrolla",
 "MB.ScrollTypeTablet": "Tavla av Ockra Dunkelhet",
 "MB.ScrollTypeUnclean": "Vanhelga Scrolla",
+"MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
+"MB.ScvmfactoryMakeScvm": "Make Scvm",
+"MB.ScvmfactoryToggleAll": "Toggle All",
+"MB.ScvmfactoryToggleNone": "Toggle None",
+"MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
 "MB.SheetClassContainer": "Mörk Borg Behållare",
 "MB.SheetClassCreature": "Mörk Borg Varelseformulär",
