Scvm lines translated

--- a/lang/de.json
+++ b/lang/de.json
@@ -24,12 +24,12 @@
 "MB.AttackFumbleText": "Ungeschicktheit: Waffe zerbricht oder geht verloren.",
 "MB.Base": "Basis",
 "MB.Broken": "Gebrochen",
-"MB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
-"MB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-"MB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
-"MB.BrokenHemorrhageLastHour": "DR18 the last hour",
-"MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-"MB.BrokenYouAreDead": "You are dead.",
+"MB.BrokenFallUnconscious": "Werde bewusstlos für {rounds} {roundsWord}, wache auf mit {hp} HP.",
+"MB.BrokenLostEye": "Verlorenes Auge. Handlungsunfähig für {rounds} {roundsWord} danach mit {hp} HP.",
+"MB.BrokenHemorrhage": "Blutung: stirbt nach {hours} {hoursWord} falls nicht behandelt. Alle Proben sind DR16 für die erste Stunde. {lastHour}",
+"MB.BrokenHemorrhageLastHour": "DR18 für die letzte Stunde",
+"MB.BrokenSeveredLimb": "Brüche oder abgetrennte Gliedmaßen. Handlungsunfähig für {rounds} {roundsWord} danach mit {hp} HP.",
+"MB.BrokenYouAreDead": "Du bist tot.",
 "MB.CarryWeight": "Traglast",
 "MB.Carrying": "Getragen",
 "MB.CarryingCapacity": "Tragkapazität",
@@ -138,29 +138,29 @@
 "MB.ReactionIndifferent": "Gleichgültig",
 "MB.ReactionKill": "Töten!",
 "MB.Rest": "Rasten",
-"MB.RestDialogDontEat": "Don't eat - Restore no stats.",
-"MB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
-"MB.RestDialogFoodAndDrink": "Food and Drink",
-"MB.RestDialogInfected": "Infected - Restore no stats, lose d6 HP per day.",
-"MB.RestDialogLength": "Rest Length",
-"MB.RestDialogLengthLong": "Long - Full night's sleep. Restore d6 HP, regain Omens if depleted, regain PRE+d4 Power uses for the day.",
-"MB.RestDialogLengthShort": "Short - Catch your breath, have a drink. Restore d4 HP.",
-"MB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
+"MB.RestDialogDontEat": "Keine Nahrungsaufnahme - regeneriere keine Attribute.",
+"MB.RestDialogEat": "Iss - Regeneriere Attribute wie oben, streiche Rationen.",
+"MB.RestDialogFoodAndDrink": "Essen und Trinken",
+"MB.RestDialogInfected": "Infiziert - regeneriere keine Attribute, verliere d6 HP pro Tag.",
+"MB.RestDialogLength": "Rastlänge",
+"MB.RestDialogLengthLong": "Lang - Nacht durchgeschlafen. Regeneriere d6 HP, erhalte Omen zurück falls aufgebraucht, erhalte PRE+d4 Nutzungen von Kräften für den Tag.",
+"MB.RestDialogLengthShort": "Kurz - Atme durch, trink etwas. Regeneriere d4 HP.",
+"MB.RestDialogStarve": "Verhungern - 2+ Tage ohne Essen oder Trinken. Regeneriere keine Attribute, verliere d4 HP/Tag.",
 "MB.Roll": "Wurf",
 "MB.Rolls": "Würfe",
-"MB.RollFormula": "Wurf Formuel",
+"MB.RollFormula": "Wurf Formel",
 "MB.RollLabel": "Wurf Label",
-"MB.Round": "round",
-"MB.Rounds": "rounds",
+"MB.Round": "Runde",
+"MB.Rounds": "Runden",
 "MB.RollPartyInitiative": "Würfle Party Initiative",
 "MB.ScrollTypeSacred": "Heilige Schriftrolle",
 "MB.ScrollTypeTablet": "Schrifttafel der ockerfarbener Dunkelheit",
 "MB.ScrollTypeUnclean": "Unreine Schriftrolle",
-"MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
-"MB.ScvmfactoryMakeScvm": "Make Scvm",
-"MB.ScvmfactoryToggleAll": "Toggle All",
-"MB.ScvmfactoryToggleNone": "Toggle None",
-"MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
+"MB.ScvmfactoryChooseFromClasses": "Wähle aus den Klassen",
+"MB.ScvmfactoryMakeScvm": "Erstelle Scvm",
+"MB.ScvmfactoryToggleAll": "Aktiviere alle",
+"MB.ScvmfactoryToggleNone": "Aktviere keine",
+"MB.ScvmfactoryWarning": "Zerstöre diesen Charakter, und ersetzte ihn mit einem neuen Scvm? WARNUNG: Kann nicht rückgängig gemacht werden!",
 "MB.SheetClassCharacter": "Standard Mork Borg Charakterbogen",
 "MB.SheetClassContainer": "Standard Mork Borg Behälterbogen",
 "MB.SheetClassCreature": "Standard Mork Borg Kreaturenbogen",
@@ -177,13 +177,13 @@
 "MB.TabDetails": "Details",
 "MB.TabFeats": "Taten",
 "MB.TabObituary": "Todesanzeige",
-"MB.TabPowers": "Wirkmächte",
+"MB.TabPowers": "Mächte",
 "MB.TabTreasures": "Schätze",
 "MB.TabViolence": "Gewalt",
 "MB.Take": "Nimm",
 "MB.TargetArmor": "Zielrüstung",
 "MB.Test": "Probe",
-"MB.TheScvmfactory": "The Scvmfactory",
+"MB.TheScvmfactory": "Die Scvmfactory",
 "MB.Tier": "Stufe",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
