Add setting to enable/disable character overcapacity encumbrance penalty.

--- a/lang/de.json
+++ b/lang/de.json
@@ -161,6 +161,21 @@
 "MB.ScvmfactoryToggleAll": "Aktiviere alle",
 "MB.ScvmfactoryToggleNone": "Aktviere keine",
 "MB.ScvmfactoryWarning": "Zerstöre diesen Charakter, und ersetzte ihn mit einem neuen Scvm? WARNUNG: Kann nicht rückgängig gemacht werden!",
+"MB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
+"MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+"MB.SettingsBlackletter": "Schwarze Schrift",
+"MB.SettingsBlackOnWhiteBlack": "Schwarz auf Weiß (Schwarz)",
+"MB.SettingsBlackOnYellowWhite": "Schwarz auf Weiß (Weiß)",
+"MB.SettingsColorScheme": "Farbschema",
+"MB.SettingsColorSchemeHint": "Wähle ein Farbschema für das UI.",
+"MB.SettingsFontScheme": "Font Schema",
+"MB.SettingsFontSchemeHint": "Wähle ein Font Schema für das UI.",
+"MB.SettingsFoundryDefault": "Foundry Standard",
+"MB.SettingsLegible": "Lesbar",
+"MB.SettingsWhiteOnBlackPink": "Weiß auf Schwarz (Pink)",
+"MB.SettingsWhiteOnBlackWhite": "Weiß auf Schwarz (Weiß)",
+"MB.SettingsWhiteOnBlackYellow": "Weiß auf Schwarz (Gelb)",
+"MB.SettingsWhiteOnPinkWhite": "Weiß auf Pink (Weiß)",
 "MB.SheetClassCharacter": "Standard Mork Borg Charakterbogen",
 "MB.SheetClassContainer": "Standard Mork Borg Behälterbogen",
 "MB.SheetClassCreature": "Standard Mork Borg Kreaturenbogen",
@@ -198,19 +213,5 @@
 "MB.WieldAPowerDizzy": "sei benommen und übe keine Macht für eine Stunde aus",
 "MB.YouAreHit": "Du bist getroffen",
 "MB.YouHaveNoFeats": "Du hast keine Taten übrig",
-"MB.YouHaveNoScrolls": "Du hast keine Schriftrollen",
-
-"SETTINGS.MBBlackletter": "Schwarze Schrift",
-"SETTINGS.MBBlackOnWhiteBlack": "Schwarz auf Weiß (Schwarz)",
-"SETTINGS.MBBlackOnYellowWhite": "Schwarz auf Weiß (Weiß)",
-"SETTINGS.MBColorScheme": "Farbschema",
-"SETTINGS.MBColorSchemeHint": "Wähle ein Farbschema für das UI.",
-"SETTINGS.MBFontScheme": "Font Schema",
-"SETTINGS.MBFontSchemeHint": "Wähle ein Font Schema für das UI.",
-"SETTINGS.MBFoundryDefault": "Foundry Standard",
-"SETTINGS.MBLegible": "Lesbar",
-"SETTINGS.MBWhiteOnBlackPink": "Weiß auf Schwarz (Pink)",
-"SETTINGS.MBWhiteOnBlackWhite": "Weiß auf Schwarz (Weiß)",
-"SETTINGS.MBWhiteOnBlackYellow": "Weiß auf Schwarz (Gelb)",
-"SETTINGS.MBWhiteOnPinkWhite": "Weiß auf Pink (Weiß)"
+"MB.YouHaveNoScrolls": "Du hast keine Schriftrollen"
 }
