--- a/lang/en.json
+++ b/lang/en.json
@@ -34,6 +34,7 @@
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
+"MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
 "MB.Cancel": "Cancel",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
@@ -162,6 +163,21 @@
 "MB.ScvmfactoryToggleAll": "Toggle All",
 "MB.ScvmfactoryToggleNone": "Toggle None",
 "MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
+"MB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
+"MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+"MB.SettingsBlackletter": "Blackletter",
+"MB.SettingsBlackOnWhiteBlack": "Black on white (black)",
+"MB.SettingsBlackOnYellowWhite": "Black on yellow (white)",
+"MB.SettingsColorScheme": "Color Scheme",
+"MB.SettingsColorSchemeHint": "Choose a color scheme for the UI.",
+"MB.SettingsFontScheme": "Font Scheme",
+"MB.SettingsFontSchemeHint": "Choose a font scheme for the UI.",
+"MB.SettingsFoundryDefault": "Foundry Default",
+"MB.SettingsLegible": "Legible",
+"MB.SettingsWhiteOnBlackPink": "White on black (pink)",
+"MB.SettingsWhiteOnBlackWhite": "White on black (white)",
+"MB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
+"MB.SettingsWhiteOnPinkWhite": "White on pink (white)",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
@@ -199,19 +215,5 @@
 "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
 "MB.YouAreHit": "You are Hit",
 "MB.YouHaveNoFeats": "You have no Feats",
-"MB.YouHaveNoScrolls": "You have no Scrolls",
-
-"SETTINGS.MBBlackletter": "Blackletter",
-"SETTINGS.MBBlackOnWhiteBlack": "Black on white (black)",
-"SETTINGS.MBBlackOnYellowWhite": "Black on yellow (white)",
-"SETTINGS.MBColorScheme": "Color Scheme",
-"SETTINGS.MBColorSchemeHint": "Choose a color scheme for the UI.",
-"SETTINGS.MBFontScheme": "Font Scheme",
-"SETTINGS.MBFontSchemeHint": "Choose a font scheme for the UI.",
-"SETTINGS.MBFoundryDefault": "Foundry Default",
-"SETTINGS.MBLegible": "Legible",
-"SETTINGS.MBWhiteOnBlackPink": "White on black (pink)",
-"SETTINGS.MBWhiteOnBlackWhite": "White on black (white)",
-"SETTINGS.MBWhiteOnBlackYellow": "White on black (yellow)",
-"SETTINGS.MBWhiteOnPinkWhite": "White on pink (white)"
+"MB.YouHaveNoScrolls": "You have no Scrolls"
 }
