--- a/lang/sv.json
+++ b/lang/sv.json
@@ -160,6 +160,21 @@
 "MB.ScvmfactoryToggleAll": "Toggle All",
 "MB.ScvmfactoryToggleNone": "Toggle None",
 "MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
+"MB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
+"MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+"MB.SettingsBlackletter": "Blackletter",
+"MB.SettingsBlackOnWhiteBlack": "Svart på vit (svart)",
+"MB.SettingsBlackOnYellowWhite": "Svart på gul (vit)",
+"MB.SettingsColorScheme": "Färgschema",
+"MB.SettingsColorSchemeHint": "Välja UI färgschema.",
+"MB.SettingsFontScheme": "Fontschema",
+"MB.SettingsFontSchemeHint": "Välja UI fontschema.",
+"MB.SettingsFoundryDefault": "Foundry Standard",
+"MB.SettingsLegible": "Läsbar",
+"MB.SettingsWhiteOnBlackPink": "Vit på svart (rosa)",
+"MB.SettingsWhiteOnBlackWhite": "Vit på svart (vit)",
+"MB.SettingsWhiteOnBlackYellow": "Vit på svart (gul)",
+"MB.SettingsWhiteOnPinkWhite": "Vit på rosa (vit)",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
 "MB.SheetClassContainer": "Mörk Borg Behållare",
 "MB.SheetClassCreature": "Mörk Borg Varelseformulär",
@@ -195,19 +210,5 @@
 "MB.WieldAPowerFumble": "Fummel - Slå Arcane Catastrophe.",
 "MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
 "MB.YouHaveNoFeats": "Du har inga Förmågor",
-"MB.YouHaveNoScrolls": "Du har inga Rullar",
-
-"SETTINGS.MBBlackletter": "Blackletter",
-"SETTINGS.MBBlackOnWhiteBlack": "Svart på vit (svart)",
-"SETTINGS.MBBlackOnYellowWhite": "Svart på gul (vit)",
-"SETTINGS.MBColorScheme": "Färgschema",
-"SETTINGS.MBColorSchemeHint": "Välja UI färgschema.",
-"SETTINGS.MBFontScheme": "Fontschema",
-"SETTINGS.MBFontSchemeHint": "Välja UI fontschema.",
-"SETTINGS.MBFoundryDefault": "Foundry Standard",
-"SETTINGS.MBLegible": "Läsbar",
-"SETTINGS.MBWhiteOnBlackPink": "Vit på svart (rosa)",
-"SETTINGS.MBWhiteOnBlackWhite": "Vit på svart (vit)",
-"SETTINGS.MBWhiteOnBlackYellow": "Vit på svart (gul)",
-"SETTINGS.MBWhiteOnPinkWhite": "Vit på rosa (vit)"
+"MB.YouHaveNoScrolls": "Du har inga Rullar"
 }
