Added weapon critOn and fumbleOn fields to allow increase critical/fumble natural roll range.

--- a/lang/de.json
+++ b/lang/de.json
@@ -86,12 +86,14 @@
   "MB.ItemAgilityDRModifier": "Agilität DR Modifikator",
   "MB.ItemCapacity": "Kapazität",
   "MB.ItemCreate": "Erstelle Item",
+  "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Schadenswürfel",
   "MB.ItemDamageReductionDie": "Schadensreduktionswürfel",
   "MB.ItemDefenseDRModifier": "Verteidigungs DR Modifikator",
   "MB.ItemDelete": "Lösche Item",
   "MB.ItemEdit": "Bearbeite Item",
   "MB.ItemEquipped": "Ausgerüstet",
+  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Geführt",
   "MB.ItemName": "Item Name",
   "MB.ItemPrice": "Preis",
