--- a/lang/en.json
+++ b/lang/en.json
@@ -87,11 +87,13 @@
   "MB.ItemAgilityDRModifier": "Agility DR Modifier",
   "MB.ItemCapacity": "Capacity",
   "MB.ItemCreate": "Create Item",
+  "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Damage Die",
   "MB.ItemDamageReductionDie": "Damage Reduction Die",
   "MB.ItemDefenseDRModifier": "Defense DR Modifier",
   "MB.ItemDelete": "Delete Item",
   "MB.ItemEdit": "Edit Item",
+  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemEquipped": "Equipped",
   "MB.ItemHanded": "Handed",
   "MB.ItemName": "Item Name",
