--- a/lang/fr.json
+++ b/lang/fr.json
@@ -86,12 +86,14 @@
   "MB.ItemAgilityDRModifier": "Agility DR Modifier",
   "MB.ItemCapacity": "Capacité",
   "MB.ItemCreate": "Crée un objet",
+  "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Dés de dégâts",
   "MB.ItemDamageReductionDie": "Damage Reduction Die",
   "MB.ItemDefenseDRModifier": "Defense DR Modifier",
   "MB.ItemDelete": "Supprimer l'objet",
   "MB.ItemEdit": "Edit Item",
   "MB.ItemEquipped": "Equipped",
+  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Handed",
   "MB.ItemName": "Nom de l'objet",
   "MB.ItemPrice": "Prix",
