--- a/lang/sv.json
+++ b/lang/sv.json
@@ -86,12 +86,14 @@
   "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
   "MB.ItemCapacity": "Kapacitet",
   "MB.ItemCreate": "Skapa Objekt",
+  "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Skadetärning",
   "MB.ItemDamageReductionDie": "Skadreduktion Tärning",
   "MB.ItemDefenseDRModifier": "Försvar SG Modifikation",
   "MB.ItemDelete": "Radera Objekt",
   "MB.ItemEdit": "Redigera Objekt",
   "MB.ItemEquipped": "Utrustad",
+  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Räckte",
   "MB.ItemName": "Objekt Namn",
   "MB.ItemPrice": "Pris",
